--- a/queue/makefile.cmk
+++ b/queue/makefile.cmk
@@ -37,25 +37,25 @@ LinkLibrary( 'casual-queue-common',
 
 
 #
-# Server
+# Group
 #
 
 casual_queue_server_archive_objs = [
-   Compile( 'source/server/server.cpp', 'obj/server/server.o'),
-   Compile( 'source/server/database.cpp', 'obj/server/database.o'),
-   Compile( 'source/server/handle.cpp', 'obj/server/handle.o')
+   Compile( 'source/group/group.cpp', 'obj/group/group.o'),
+   Compile( 'source/group/database.cpp', 'obj/group/database.o'),
+   Compile( 'source/group/handle.cpp', 'obj/group/handle.o')
 ];
 
 
-LinkArchive( 'casual-queue-server-archive',
+LinkArchive( 'casual-queue-group-archive',
     casual_queue_server_archive_objs
     )
 
 
-LinkExecutable( 'casual-queue-server', 
-    [Compile( 'source/server/main.cpp', 'obj/server/main.o')], 
+LinkExecutable( 'casual-queue-group', 
+    [Compile( 'source/group/main.cpp', 'obj/group/main.o')], 
     [
-     'casual-queue-server-archive',
+     'casual-queue-group-archive',
      'casual-queue-common',
      'casual-common',
      'sqlite3',
@@ -113,22 +113,22 @@ LinkLibrary( 'casual-queue',
 # Unittest
 #
 casual_queue_unittest_objs = [
-  Compile( 'unittest/isolated/source/test_server_database.cpp', 'obj/unittest/test_server_database.o'),
+  Compile( 'unittest/isolated/source/test_group_database.cpp', 'obj/unittest/test_group_database.o'),
   ];
 
 LinkIsolatedUnittest( 'test-casual-queue', 
     casual_queue_unittest_objs,
     [
-     'casual-queue-server-archive',
+     'casual-queue-group-archive',
      'casual-common',
      'sqlite3',
      ]  
 );
 
 #
-# Make sure the binaries is linked before unittest
+# Make sure the executables is linked before unittest
 #
-Dependencies( 'test-casual-queue', ['casual-queue-broker', 'casual-queue-server'])
+Dependencies( 'test-casual-queue', ['casual-queue-broker', 'casual-queue-group'])
 
 
 
