--- a/test/makefile.cmk
+++ b/test/makefile.cmk
@@ -9,7 +9,8 @@ SetIncludePaths( ["include",
 	"$(YAML_INCLUDE_PATH)",
     "$(UNITTEST_INCLUDE_PATH)"
     ])
-SetLibraryPaths( ["../xatmi/bin",
+SetLibraryPaths( [ "./bin",
+	"../xatmi/bin",
 	"../common/bin",
 	"../buffer/bin",
 	"../serviceframework/bin",
@@ -22,7 +23,7 @@ SetLibraryPaths( ["../xatmi/bin",
 
 
 
-LinkArchive( "sftestproxy", 
+LinkArchive( "bin/sftestproxy", 
 	[ 
 	   Compile( "source/sf_testproxy.cpp", "obj/sf_testproxy.o")
 	])
@@ -32,7 +33,7 @@ LinkArchive( "sftestproxy",
 
 
 
-LinkServer( "test",
+LinkServer( "bin/test",
 	[ Compile( "source/template_server.cpp", "obj/template_server.o")],
 	[ 
 		"casual-xatmi", 
@@ -59,7 +60,7 @@ LinkServer( "test",
 #
 
 
-LinkArchive( "sf-test-vo",
+LinkArchive( "bin/sf-test-vo",
     [
 	   Compile( "source/sf_testvo.cpp", "obj/sf_testvo.o")
 	])
@@ -70,7 +71,7 @@ LinkArchive( "sf-test-vo",
 #
 
 
-LinkServer("sf_test",
+LinkServer("bin/sf_test",
     [
 	   Compile( "source/template_sf_server.cpp", "obj/template_sf_server.o"),
 	   Compile( "source/template_sf_server_implementation.cpp", "obj/template_sf_server_implementation.o"),
@@ -90,7 +91,7 @@ LinkServer("sf_test",
 	
 
 
-LinkExecutable( "test_client",
+LinkExecutable( "bin/test_client",
 	[ 
 		Compile( "source/template_client.cpp", "obj/template_client.o")
 	], 
@@ -99,13 +100,13 @@ LinkExecutable( "test_client",
 
 
 
-LinkExecutable( "test_multicall_client",
+LinkExecutable( "bin/test_multicall_client",
 	[
 		Compile( "source/test_multicall.cpp", "obj/test_multicall.o")
 	], ["casual-common", "casual-xatmi", "casual-sf"])
 	
 
-LinkExecutable( "test_proxycall_client",
+LinkExecutable( "bin/test_proxycall_client",
 	[ 
 		Compile( "source/test_proxycall.cpp", "obj/test_proxycall.o")
     ], 
@@ -116,7 +117,7 @@ LinkExecutable( "test_proxycall_client",
 # unittest
 #
 
-LinkIsolatedUnittest( "test-casual-generation-isolated",
+LinkIsolatedUnittest( "unittest/bin/test-casual-generation-isolated",
     [
 	   Compile( "unittest/isolated/source/test_yaml_sf_generation.cpp", "unittest/isolated/obj/test_yaml_sf_generation.o")
 	],
@@ -128,7 +129,7 @@ LinkIsolatedUnittest( "test-casual-generation-isolated",
 #
 
 
-LinkServer("sf-detoct-test-server",
+LinkServer("bin/sf-detoct-test-server",
     [ 
 	   Compile( "source/sf_testserverserver.cpp", "obj/sf_testserverserver.o"),
 	   Compile( "source/sf_testserverimplementation.cpp", "obj/sf_testserverimplementation.o")
@@ -141,11 +142,11 @@ LinkServer("sf-detoct-test-server",
 #
 # Install
 #
-InstallExecutable("test","$CASUAL_HOME/bin/.")
-InstallExecutable("sf_test","$CASUAL_HOME/bin/.")
-InstallExecutable("test_client","$CASUAL_HOME/bin/.")
-InstallExecutable("test_multicall_client","$CASUAL_HOME/bin/.")
-InstallExecutable("sf-detoct-test-server","$CASUAL_HOME/bin/.")
+InstallExecutable("bin/test","$CASUAL_HOME/bin/.")
+InstallExecutable("bin/sf_test","$CASUAL_HOME/bin/.")
+InstallExecutable("bin/test_client","$CASUAL_HOME/bin/.")
+InstallExecutable("bin/test_multicall_client","$CASUAL_HOME/bin/.")
+InstallExecutable("bin/sf-detoct-test-server","$CASUAL_HOME/bin/.")
 
 	
 	
