--- a/tools/makefile.cmk
+++ b/tools/makefile.cmk
@@ -24,19 +24,19 @@ SetLibraryPaths( ["bin",
 
 
 
-LinkExecutable( "casual-build-server",
+LinkExecutable( "bin/casual-build-server",
    [ Compile( "build_server/build_server.cpp", "build_server/obj/build_server.o")],
    [ "casual-common", "casual-sf", "casual-configuration"])
 
 
-LinkExecutable( "casual-build-resource-proxy",
+LinkExecutable( "bin/casual-build-resource-proxy",
    [ Compile( "resource_proxy/build_resource_proxy.cpp", "resource_proxy/obj/build_resource_proxy.o")],
    [ "casual-common", 
     "casual-sf", 
     "casual-configuration"])
 
 
-InstallExecutable("casual-build-resource-proxy","$CASUAL_HOME/bin/.")
-InstallExecutable("casual-build-server","$CASUAL_HOME/bin/.")
+InstallExecutable("bin/casual-build-resource-proxy","$CASUAL_HOME/bin/.")
+InstallExecutable("bin/casual-build-server","$CASUAL_HOME/bin/.")
 
 
