--- a/test/makefile.cmk
+++ b/test/makefile.cmk
@@ -2,14 +2,14 @@ from casual.make.functiondefinitions import *
 
 Include( "$(CASUAL_BUILD_ENVIRONMENT)")
 
-SetIncludePaths( ["include",
+IncludePaths( ["include",
 	"../common/include",
 	"../serviceframework/include",
 	"../xatmi/include",
 	"$(YAML_INCLUDE_PATH)",
     "$(UNITTEST_INCLUDE_PATH)"
     ])
-SetLibraryPaths( [ "./bin",
+LibraryPaths( [ "./bin",
 	"../xatmi/bin",
 	"../common/bin",
 	"../buffer/bin",
@@ -21,6 +21,7 @@ SetLibraryPaths( [ "./bin",
 
 
 
+install_bin = []
 
 
 LinkArchive( "bin/sftestproxy", 
@@ -33,7 +34,7 @@ LinkArchive( "bin/sftestproxy",
 
 
 
-LinkServer( "bin/test",
+target = LinkServer( "bin/test",
 	[ Compile( "source/template_server.cpp", "obj/template_server.o")],
 	[ 
 		"casual-xatmi", 
@@ -44,7 +45,7 @@ LinkServer( "bin/test",
 	"source/template_server.yaml",
 	["rm-mockup"])
 
-
+install_bin.append( target)
 
 #Compile( "source/template_server_dispatcher.c", "obj/template_server_dispatcher.o")
 
@@ -71,7 +72,7 @@ LinkArchive( "bin/sf-test-vo",
 #
 
 
-LinkServer("bin/sf_test",
+target = LinkServer("bin/sf_test",
     [
 	   Compile( "source/template_sf_server.cpp", "obj/template_sf_server.o"),
 	   Compile( "source/template_sf_server_implementation.cpp", "obj/template_sf_server_implementation.o"),
@@ -87,32 +88,35 @@ LinkServer("bin/sf_test",
     "casual_sf_test2"
     ])
 
-
+install_bin.append( target)
 	
 
 
-LinkExecutable( "bin/test_client",
+target = LinkExecutable( "bin/test_client",
 	[ 
 		Compile( "source/template_client.cpp", "obj/template_client.o")
 	], 
     ["casual-common", "casual-xatmi"])
 	
 
+install_bin.append( target)
 
 
-LinkExecutable( "bin/test_multicall_client",
+target = LinkExecutable( "bin/test_multicall_client",
 	[
 		Compile( "source/test_multicall.cpp", "obj/test_multicall.o")
 	], ["casual-common", "casual-xatmi", "casual-sf"])
 	
+install_bin.append( target)
 
-LinkExecutable( "bin/test_proxycall_client",
+
+target = LinkExecutable( "bin/test_proxycall_client",
 	[ 
 		Compile( "source/test_proxycall.cpp", "obj/test_proxycall.o")
     ], 
 	["casual-sf", "sftestproxy", "casual-xatmi"])
 	
-	
+install_bin.append( target)
 #
 # unittest
 #
@@ -142,11 +146,7 @@ LinkServer("bin/sf-detoct-test-server",
 #
 # Install
 #
-InstallExecutable("bin/test","$CASUAL_HOME/bin/.")
-InstallExecutable("bin/sf_test","$CASUAL_HOME/bin/.")
-InstallExecutable("bin/test_client","$CASUAL_HOME/bin/.")
-InstallExecutable("bin/test_multicall_client","$CASUAL_HOME/bin/.")
-InstallExecutable("bin/sf-detoct-test-server","$CASUAL_HOME/bin/.")
+Install( install_bin,'$(CASUAL_HOME)/bin')
 
 	
 	
