WIP queue - rm-proxy for casual-queue is now produced from casual-make
Added LinkResource to casual-make

Not sure if we get more problems regarding dependencies for
first-time-builders.

--- a/configuration/resources.yaml
+++ b/configuration/resources.yaml
@@ -22,5 +22,7 @@ resources:
     libraries:
       - casual-mockup
 
-      
+  - key: casual-queue-rm
+    server: casual-queue-resource-proxy
+    xa_struct_name: casual_queue_xa_switch_dynamic
   
